--- a/app/src/views/home/post_view.ejs
+++ b/app/src/views/home/post_view.ejs
@@ -220,7 +220,7 @@
         >
           쪽지
         </button>
-        <button class="button-list" onclick="location.href='/message'">
+        <button class="button-list" onclick="location.href='/community'">
           글 목록
         </button>
         <button
@@ -320,7 +320,7 @@
             return;
           }
           // 새 경로로 이동하며, 필요한 정보를 쿼리 스트링으로 전달
-          location.href = `/message?postnum=${postnum}&reciper=${reciper}&sender=${sender}`;
+          location.href = `/message_list?postnum=${postnum}&reciper=${reciper}&sender=${sender}`;
         }
 
         // 쿠키 값을 가져오는 함수
