쪽지 1차 수정

--- a/app/src/views/home/post_view.ejs
+++ b/app/src/views/home/post_view.ejs
@@ -215,7 +215,7 @@
           캡쳐
         </button>
         <button
-          onclick="sendMessage('<%= post.postnum %>', '<%= post.writer_id %>')"
+          onclick="sendMessage('<%= post.postnum %>', '<%= post.id %>')"
           class="button-scrap"
         >
           쪽지
