--- a/app/src/views/home/message.ejs
+++ b/app/src/views/home/message.ejs
@@ -22,8 +22,8 @@
         %>
         <li class="message-item">
           <p class="message-title"><%= message1.postnum %></p>
-          <p class="message-title">보낸 사람: <%= message1.sender %></p>
-          <p>받는 사람: <%= message1.reciper %></p>
+          <p class="message-title">보낸 사람: <%= message1.sender_id %></p>
+          <p>받는 사람: <%= message1.reciver_id %></p>
           <p  class="message-time">보낸 시간: <%= message1.created_at %></p>
           <!-- 쪽지 제목 -->
           <!-- 쪽지 시간 -->
