--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -114,12 +114,12 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="psword">비밀번호</label>
+          <label for="password">비밀번호</label>
           <div class="input-wrapper">
             <input
               type="password"
-              id="psword"
-              name="psword"
+              id="password"
+              name="password"
               placeholder="비밀번호를 입력하세요"
               required
             />
@@ -128,12 +128,12 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="Confirm-psword">비밀번호 재확인</label>
+          <label for="Confirm-password">비밀번호 재확인</label>
           <div class="input-wrapper">
             <input
               type="password"
-              id="Confirm-psword"
-              name="Confirm-psword"
+              id="Confirm-password"
+              name="Confirm-password"
               placeholder="비밀번호를 다시 입력하세요"
               required
             />
