--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -25,10 +25,10 @@
           </div>
           <div class="form-group">
             <input
-              id="psword"
+              id="password"
               type="password"
               placeholder="비밀번호"
-              name="psword"
+              name="password"
               required
             />
           </div>
