쪽지 개쉐기야

--- a/app/src/public/css/home/community.css
+++ b/app/src/public/css/home/community.css
@@ -14,7 +14,7 @@ body {
 
 .header a.logo {
     font-size: 30px;
-    color: #ffcc00; /* KUCIS 로고 색상 */
+    color: #ffcc00; /* NGDB 로고 색상 */
     font-weight: bold;
     text-decoration: none;
 }
