--- a/app/src/views/home/board.ejs
+++ b/app/src/views/home/board.ejs
@@ -112,9 +112,9 @@
 </head>
 <body>
 
-    <!-- 헤더: KUCIS 로고 -->
+    <!-- 헤더: NGDB 로고 -->
     <div class="header">
-        <a href="/login" class="logo">KUCIS</a>
+        <a href="/login" class="logo">NGDB</a>
     </div>
 
     <!-- 구분선 -->
