--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -99,7 +99,7 @@
   </head>
   <body>
     <div class="signup-container">
-      <h1>KUCIS</h1>
+      <h1>NGDB</h1>
       <form id="joinForm">
         <div class="form-group">
           <label for="id">아이디</label>
