--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -34,7 +34,7 @@
           </div>
           <button id="button" type="submit" value="로그인">로그인</button>
           <p class="message">
-            Not registered? <a href="/register">Create an account</a>
+            계정이 없으신가요? <a href="/register">계정 생성</a>
           </p>
         </form>
       </div>
