--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -182,7 +182,7 @@
           <input type="submit" value="가입" id="button" />
         </div>
 
-        <p>Already registered?<a href="/"> Login</a></p>
+        <p>이미 계정이 있으신가요?<a href="/"> 로그인</a></p>
       </form>
     </div>
   </body>
