--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -4,16 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <script src="/js/home/login.js" defer></script>
-    <link rel="stylesheet" href="/css/home/index.css" />
+    <script src="/js/home/login.js" defer></script> <!-- 로그인 관련 JavaScript 파일 연결 -->
+    <link rel="stylesheet" href="/css/home/index.css" /> <!-- 로그인 페이지 CSS 스타일 연결 -->
   </head>
   <body>
     <div class="login-container">
+      <!-- 로그인 헤더 -->
       <div class="login-header">
-        <h1><a href="/" class="logo">NGDB</a></h1>
+        <h1><a href="/" class="logo">NGDB</a></h1> <!-- 로고 클릭 시 메인 페이지로 이동 -->
       </div>
+
+      <!-- 로그인 폼 -->
       <div class="login-form">
-        <form action="/" method="post">
+        <form action="/" method="post"> <!-- 로그인 폼, POST 방식으로 서버에 요청 -->
+          <!-- 아이디 입력 필드 -->
           <div class="form-group">
             <input
               id="id"
@@ -23,6 +27,7 @@
               required
             />
           </div>
+          <!-- 비밀번호 입력 필드 -->
           <div class="form-group">
             <input
               id="password"
@@ -32,7 +37,9 @@
               required
             />
           </div>
+          <!-- 로그인 버튼 -->
           <button id="button" type="submit" value="로그인">로그인</button>
+          <!-- 회원가입 링크 -->
           <p class="message">
             계정이 없으신가요? <a href="/register">계정 생성</a>
           </p>
